--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,19 @@
 name: Extension builder
 
 on:
-  workflow_dispatch:
-  
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
+
 jobs:
   build:
     strategy:
       matrix:
         os: [ubuntu-22.04, windows-2022]
         include:
-          - os: ubuntu-20.04
+          - os: ubuntu-22.04
             cc: clang-11
             cxx: clang++-11
           - os: windows-2022
