--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,13 +11,11 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-22.04, windows-2022]
+        os: [ubuntu-24.04]
         include:
-          - os: ubuntu-22.04
+          - os: ubuntu-24.04
             cc: clang-11
             cxx: clang++-11
-          - os: windows-2022
-            cc: msvc
       fail-fast: false
 
     name: ${{ matrix.os }} - ${{ matrix.cc }}
